# Exasim

./: .gitignore  AGENTS.md  HOT7_PLAN.md  LIBRARY_PLAN.md  LIBRARY_PORT_INVENTORY.md  LICENSE  README.md  exasim.rb
.codex_staticlibraryabi/: CMakeLists.txt  README.md
.codex_staticlibraryabi/apps/: run_dynamic.cpp  run_source.cpp  run_template.cpp
.codex_staticlibraryabi/include/: core.hpp  driver_abi.hpp
.codex_staticlibraryabi/providers/dynamic/: dynamic_provider.cpp
.codex_staticlibraryabi/providers/template/: template_provider.cpp
.codex_staticlibraryabi/src/: core.cpp
Installation/: CMakeLists.txt  cmakecompile.jl  cmakecompile.m  findinstallexec.py  install.jl  install.m  install.py  setpath.jl  setpath.m  setpath.py  setpath.py~
apps/poisson/poisson3d/: CMakeLists.txt  my_model.hpp  pdeapp.txt  pdemodel.txt
backend/Model/: CMakeLists.txt  Code2Cpp.cpp  HdgEoS.cpp  HdgFbou.cpp  HdgFbou1.cpp  HdgFbou2.cpp  HdgFbouonly.cpp  HdgFbouonly1.cpp  HdgFbouonly2.cpp  HdgFint.cpp  HdgFint1.cpp  HdgFint2.cpp  HdgFintonly.cpp  HdgFintonly1.cpp  HdgFintonly2.cpp  HdgFlux.cpp  HdgFlux1.cpp  HdgFlux2.cpp  HdgQoIvolume.cpp  HdgSource.cpp  HdgSource1.cpp  HdgSource2.cpp  HdgSourcew.cpp  HdgSourcewonly.cpp  HdgTdfunc.cpp  HdgUbou.cpp  HdgVisScalars.cpp  HdgVisVectors.cpp  KokkosAvfield.cpp  KokkosAvfield1.cpp  KokkosAvfield2.cpp  KokkosDrivers.cpp  KokkosEoS.cpp  KokkosEoS1.cpp  KokkosEoSdu.cpp  KokkosEoSdu1.cpp  KokkosEoSdw.cpp  KokkosEoSdw2.cpp  KokkosFbou.cpp  KokkosFbou1.cpp  (+59 more)
backend/Model/BuiltIn/: BuiltinModelDrivers.cpp  Makefile  builtinlibprovider.cpp  builtinmodelsource.cpp  builtinprovider.cpp  compile.txt  dstype.hpp  genmodel4.m  libbuiltinmodel.cpp  libbuiltinmodel.hpp  libbuiltinmodelserial.dylib  pdemodel4.m
backend/Model/FrontendGenerated/: HdgFbou.cpp  HdgFbou1.cpp  HdgFbouonly.cpp  HdgFbouonly1.cpp  HdgFext1.cpp  HdgFext2.cpp  HdgFextonly1.cpp  HdgFextonly2.cpp  HdgFint1.cpp  HdgFintonly2.cpp  HdgFlux.cpp  HdgFlux1.cpp  HdgFlux2.cpp  HdgSourcew2.cpp  KokkosDrivers.cpp  KokkosEoS2.cpp  KokkosEoSdu2.cpp  KokkosEoSdw1.cpp  KokkosFhat.cpp  KokkosFhat1.cpp  KokkosFhat2.cpp  KokkosFlux.cpp  KokkosFlux2.cpp  KokkosInitodg2.cpp  KokkosInitq2.cpp  KokkosInitu.cpp  KokkosInitwdg1.cpp  KokkosInitwdg2.cpp  KokkosOutput1.cpp  KokkosQoIboundary.cpp  KokkosQoIboundary1.cpp  KokkosQoIboundary2.cpp  KokkosQoIvolume.cpp  KokkosQoIvolume1.cpp  KokkosSource.cpp  KokkosSourcew1.cpp  KokkosStab.cpp  KokkosStab1.cpp  KokkosStab2.cpp  KokkosTdfunc.cpp  (+12 more)
backend/Model/ModelDispatch/: ModelDriversDispatch.hpp  builtin_library_adapter.cpp  driver_abi.h  driver_abi.hpp  frontend_generated_model_adapter.cpp  model_adapter.hpp  model_binding.hpp  model_drivers_abi.cpp  model_ops.hpp  modelkernels.h  shared_library_adapter.cpp  user_defined_model_adapter.hpp
backend/Model/Text2codeGenerated/: Code2Cpp.cpp  HdgFbou.cpp  HdgFext.cpp  HdgFextonly.cpp  HdgFint.cpp  HdgFintonly.cpp  HdgSourcewonly.cpp  HdgTdfunc.cpp  KokkosAvfield.cpp  KokkosEoSdu.cpp  KokkosFbou.cpp  KokkosFext.cpp  KokkosFhat.cpp  KokkosFint.cpp  KokkosSourcew.cpp  KokkosStab.cpp  KokkosVisScalars.cpp  KokkosVisTensors.cpp  ModelDrivers.cpp  SymbolicFunctions.hpp  SymbolicScalarsVectors.cpp  SymbolicScalarsVectors.hpp  cpuInitu.cpp  libpdemodel.hpp  libpdemodelserial.dylib  libt2cmodel.cpp  libt2cmodel.hpp  libt2cmodelserial.dylib  my_model.hpp  t2clibprovider.cpp  text2codeprovider.cpp
backend/Model/UserDefined/: HdgEoS.cpp  HdgFbou.cpp  HdgFbouonly.cpp  HdgFext.cpp  HdgFintonly.cpp  HdgFlux.cpp  HdgSource.cpp  HdgSourcew.cpp  HdgSourcewonly.cpp  KokkosAvfield.cpp  cpuInitq.cpp  (+27 more)
install/: CMakeLists.txt  CMakeLists20260516.txt  CMakeListsOld.txt  CMakeListsOrig.txt  Makefile  Makefile.builds  cmakecompile.jl  cmakecompile.m  compilepdemodel.m  findinstallexec.jl  findinstallexec.m  findinstallexec.py  hpc.txt  install.m  install.py  installkokkos.txt  setpath.jl  setpath.m  setpath.py
metis/preprocessing/: CMakeLists.txt  TextParser.hpp  comparestructs.cpp  domaindecomposition.cpp  helpers.cpp  makemaster.cpp  makemesh.cpp  parmetisexasim.cpp  pdemodel.txt  preprocess.cpp  readmesh.cpp  readpdeapp.cpp  structs.hpp  writebinaryfiles.cpp
tests/: CMakeLists.txt  exasimtest.m  fasttests.m  newunittest.m  quicktests.m  run-install-consumer.sh  runtests.m  unittests.m
tests/install_consumer/: .gitignore  CMakeLists.txt  README.md  main.cpp  my_model.hpp
tests/multi_tu_consumer/: CMakeLists.txt  README.md  main.cpp  unit_a.cpp  unit_b.cpp
text2code/text2code/: CMakeLists.txt  CodeCompiler.cpp  CodeGenerator.cpp  CodeGenerator.hpp  README.md  Text2Code.cpp  TextParser.hpp  connectivity.cpp  connectivity_test.cpp  domaindecomposition.cpp  doxyfile  helpers.cpp  helpersexasim.cpp  makemaster.cpp  makemasterexasim.cpp  makemesh.cpp  makemeshexasim.cpp  parmetis.cpp  pdeapp.txt  readmesh.cpp  readpdeapp.cpp  text2code  text2code.cpp  tinyexpr.cpp  writebinaryfiles.cpp
tutorial/: .gitignore  CMakeLists.txt  README.md  run-all.sh
tutorial/00-overview/: README.md
tutorial/01-codegen-abi-adapter/: README.md
tutorial/01-generated-prebuilt/: README.md  pdeapp.txt
tutorial/01-handwritten-cli/: CMakeLists.txt  README.md  main.cpp  pdeapp.txt
tutorial/02-codegen-cli/: CMakeLists.txt  README.md  main.cpp  pdemodel.txt
tutorial/02-generated-cli/: CMakeLists.txt  README.md
tutorial/02-handwritten-facade/: CMakeLists.txt  README.md  main.cpp
tutorial/03-codegen-cli/: CMakeLists.txt  README.md  main.cpp
tutorial/03-codegen-facade/: CMakeLists.txt  README.md  main.cpp
tutorial/03-generated-embedded/: CMakeLists.txt  README.md
tutorial/04-codegen-facade/: CMakeLists.txt  README.md  main.cpp
tutorial/04-handwritten-cli/: CMakeLists.txt  README.md  main.cpp
tutorial/05-codegen-abi-adapter/: README.md
tutorial/05-handwritten-embedded/: CMakeLists.txt  README.md  main.cpp
tutorial/05-handwritten-facade/: CMakeLists.txt  README.md  main.cpp
tutorial/06-handwritten-distributed/: CMakeLists.txt  README.md  main.cpp
tutorial/06-handwritten-facade-mpi/: CMakeLists.txt  README.md
tutorial/tools/: squaregrid.py
(+4458 files in other folders)
